--- a/src/components/Champion/ChampionCard.module.scss
+++ b/src/components/Champion/ChampionCard.module.scss
@@ -1,45 +1,6 @@
 @import url(../../styles/_colors.scss);
 // @import url(../../styles/_colors.scss)
 
-.wrapper {
-  padding: 1rem 3rem;
-}
-
-.compsWrapper {
-  padding: 1rem;
-  margin: 1rem 0;
-  border-radius: 0.5rem;
-  background-color: var(--secondary);
-  border: 1px solid grey;
-}
-
-.flexComp {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-
-  strong {
-    color: var(--primary);
-  }
-
-  h3,
-  p {
-    margin: 0 0.5rem;
-  }
-
-  h3:hover {
-    color: var(--primary);
-    cursor: pointer;
-  }
-}
-
-.compsFigureContainer {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
 .championsWrapper {
   position: relative;
   display: flex;
@@ -51,6 +12,7 @@
     border-radius: 50%;
     height: 100px;
     border: 3px solid grey;
+
     &:hover {
       cursor: pointer;
       box-shadow: 0 0 2px #fff, 0 0 10px #fff, 0 0 15px #caac6f,
@@ -58,6 +20,12 @@
     }
   }
 }
+
+.tooltipItem {
+  display: flex;
+  grid-column: 1;
+}
+
 .itemHolder {
   position: relative;
   display: flex;
@@ -105,6 +73,7 @@
   grid-template-columns: 1fr 1fr;
   justify-items: end;
   gap: 2rem;
+  grid-row: span 2;
 
   .traitName {
     display: flex;
