--- a/src/components/Champion/ChampionCard.module.scss
+++ b/src/components/Champion/ChampionCard.module.scss
@@ -1,65 +1,45 @@
 @import url(../../styles/_colors.scss);
-// @import url(../../styles/_colors.scss)
+
+$box-shadow: 0 0 2px #fff, 0 0 10px var(--accent), 0 0 15px var(--accent);
+$border: 0.125rem solid var(--accent);
 
 .championsWrapper {
   position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
-
-  .championIcon {
-    margin: 1rem;
-    border-radius: 50%;
-    height: 100px;
-    border: 3px solid grey;
-
-    &:hover {
-      cursor: pointer;
-      box-shadow: 0 0 2px #fff, 0 0 10px #fff, 0 0 15px #caac6f,
-        0 0 20px #caac6f;
-    }
-  }
 }
 
-.tooltipItem {
-  display: flex;
-  grid-column: 1;
-}
-
-.itemHolder {
-  position: relative;
-  display: flex;
+.tooltipChamp,
+.tooltipComponent {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  position: absolute;
+  display: grid;
+  background-color: var(--secondary-light);
+  left: 50%;
+  bottom: 40%;
+  transform: translate(-50%, -50%);
+  border-radius: 0.3rem;
+  width: 18rem;
+  gap: 0.5rem;
+  padding: 1rem;
 }
 
 .tooltipChamp {
-  visibility: hidden;
-  background-color: #555;
-  color: #fff;
-  padding: 5px 0;
-  border-radius: 5px;
-  position: absolute;
   z-index: 10;
-  left: 50%;
-  bottom: 40%;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-  transform: translate(-50%, -50%);
-  display: grid;
   grid-template-columns: 1fr 2fr;
   align-items: center;
   justify-items: center;
-  width: 300px;
-  gap: 0.5rem;
-  padding: 0.5rem;
 
   .tooltipChampIcon {
     grid-row: span 2;
     grid-column: 1;
     display: flex;
-    width: 60px;
-    height: auto;
-    border-radius: 2px;
-    border: 2px solid #caac6f;
+    width: 3.75rem;
+    border-radius: 0.125rem;
+    border: $border;
   }
 
   &.visible {
@@ -92,54 +72,30 @@
   }
 }
 
-.championName {
-  text-align: center;
-}
-
-.itemWrapper {
+.tooltipItem {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  z-index: 5;
-  bottom: 1.7rem;
-  left: 50%;
-  bottom: 10%;
-  transform: translateX(-50%);
+  grid-column: 1;
 }
-
 .square {
   height: 25px;
   width: 25px;
-  border: 2px solid #caac6f;
+  border: $border;
   position: relative;
   z-index: 10;
 
   &:hover {
-    box-shadow: 0 0 2px #fff, 0 0 10px #fff, 0 0 15px #caac6f;
+    box-shadow: $box-shadow;
     cursor: pointer;
   }
 }
 
 .tooltipComponent {
-  visibility: hidden;
-  background-color: var(--secondary);
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 5px;
-  position: absolute;
   z-index: 20;
-  bottom: 125%;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0;
-  display: grid;
+
   grid-template-columns: repeat(2, 1fr);
   justify-items: center;
   align-items: start;
-  width: 240px;
-  gap: 0.5rem;
-  padding: 0.5rem;
+  text-align: center;
 
   &.visible {
     opacity: 1;
@@ -154,6 +110,35 @@
     grid-column: span 2;
     text-align: start;
   }
+}
+
+.itemHolder {
+  position: relative;
+  display: flex;
+}
+
+.championIcon {
+  margin: 1rem;
+  border-radius: 50%;
+  height: 6.25rem;
+  border: 0.2rem solid var(--accent);
+
+  &:hover {
+    cursor: pointer;
+    box-shadow: $box-shadow;
+  }
+}
+
+.itemWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 5;
+  bottom: 1.7rem;
+  left: 50%;
+  bottom: 10%;
+  transform: translateX(-50%);
 }
 
 .componentsHolder {
@@ -174,6 +159,10 @@
     font-size: 0.75rem;
     text-align: center;
   }
+}
+
+.championName {
+  text-align: center;
 }
 
 .btnContainer {
