--- a/src/components/TeamComps/TeamComps.module.scss
+++ b/src/components/TeamComps/TeamComps.module.scss
@@ -1,4 +1,5 @@
 @import url(../../styles/_colors.scss);
+$border: 0.125rem solid var(--accent);
 
 .wrapper {
   padding: 1rem 3rem;
@@ -9,7 +10,12 @@
   margin: 1rem 0;
   border-radius: 0.5rem;
   background-color: var(--secondary);
-  border: 1px solid grey;
+  border: 0.125rem solid var(--secondary);
+  transition: all 0.3s;
+
+  &:hover {
+    border: $border;
+  }
 }
 
 .flexComp {
@@ -31,4 +37,13 @@
     color: var(--primary);
     cursor: pointer;
   }
+}
+
+.compTitle {
+  display: flex;
+  align-items: center;
+}
+
+.tierImage {
+  height: 2rem;
 }
