--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,19 +1,22 @@
-@import 'reset';
-@import 'colors';
-@import 'btn';
+@import "reset";
+@import "colors";
+@import "breakpoints";
+@import "btn";
 
 body {
-    background-color: var(--background);
-    color: var(--text);
-    font-family: 'Raleway', sans-serif;
+  background-color: var(--background);
+  color: var(--text);
+  font-family: "Raleway", sans-serif;
 }
 
-.container {
-    display: grid;
+.mainWrapper {
+  display: grid;
+  @media screen and (min-width: $screen-xl) {
     grid-template-columns: 1fr 8fr;
+  }
 }
 
 h1 {
-    text-align: center;
-    padding: 2rem 0;
+  text-align: center;
+  padding: 2rem 0;
 }
