--- a/src/pages/TeamPage.module.scss
+++ b/src/pages/TeamPage.module.scss
@@ -1,13 +1,30 @@
 .container {
   display: flex;
-  align-items: center;
   justify-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.title {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .tierImage {
-  width: 100px;
+  width: 50px;
 }
 
+.traitName {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  img {
+    width: 25px;
+  }
+}
 .championsWrapper {
   display: flex;
 
