--- a/src/pages/TeamPage.module.scss
+++ b/src/pages/TeamPage.module.scss
@@ -1,9 +1,9 @@
-.container {
+.contentWrapper {
   display: flex;
   justify-items: center;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem 3rem;
+  padding: 1rem 5rem;
 }
 
 .titleWrapper {
