--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -1,3 +1,10 @@
+.mainWrapper {
+  display: grid;
+  @media screen and (min-width: $screen-xl) {
+    grid-template-columns: 1fr 8fr;
+  }
+}
+
 .contentWrapper {
   display: flex;
   justify-items: center;
@@ -26,7 +33,6 @@
     }
   }
 }
-
 .title {
   display: flex;
   align-items: center;
