cleaning up structure

--- a/src/styles/_aside.scss
+++ b/src/styles/_aside.scss
@@ -1,8 +1,8 @@
-.container {
+.aside__container {
   padding: 1rem 3rem;
   position: sticky;
 }
-li {
+.aside__link {
   &:hover {
     cursor: pointer;
   }
