--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,9 @@
 @import "reset";
 @import "colors";
 @import "breakpoints";
+@import "navbar";
+@import "aside";
+@import "itemList";
 @import "pages";
 @import "btn";
 
