--- a/src/styles/_aside.scss
+++ b/src/styles/_aside.scss
@@ -1,8 +1,8 @@
-.aside__container {
+.as-container {
   padding: 1rem 3rem;
   position: sticky;
 }
-.aside__link {
+.as-link {
   &:hover {
     cursor: pointer;
   }
