--- a/src/styles/_itemList.scss
+++ b/src/styles/_itemList.scss
@@ -1,10 +1,10 @@
-.itemListContainer {
+.il-container {
   display: grid;
   grid-template-columns: 1fr;
   gap: 2rem;
 }
 
-.itemListHeader {
+.il-header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
@@ -13,14 +13,14 @@
   padding: 1rem 0;
 }
 
-.itemListItemContainer {
+.il-item-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-content: center;
 }
 
-.itemListItem {
+.il-item {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,19 +31,19 @@
   }
 }
 
-.itemListItemImg {
+.il-item-img {
   height: 70px;
   width: 70px;
   border: 3px solid rgb(255, 165, 0);
 }
 
-.itemListComponents {
+.il-components-container {
   display: flex;
   gap: 1rem;
   justify-content: center;
 }
 
-.itemListComponent {
+.il-component {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -52,18 +52,18 @@
 
   &:hover {
     cursor: pointer;
-    .componentDetails {
+    .il-component-details {
       display: flex;
     }
   }
 }
 
-.itemListComponentImg {
+.il-component-img {
   height: 50px;
   width: 50px;
 }
 
-.itemListComponentDetails {
+.il-component-details {
   position: absolute;
   bottom: 2.5rem;
   display: none;
