--- a/src/styles/_championsCard.scss
+++ b/src/styles/_championsCard.scss
@@ -6,6 +6,7 @@ $border: 0.125rem solid var(--accent);
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
 }
 
 .cc-tooltip-champ,
