--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "colors";
 @import "breakpoints";
 @import "btn";
+@import "global";
 @import "navbar";
 @import "aside";
 @import "searchBar";
@@ -9,7 +10,6 @@
 @import "champions";
 @import "itemList";
 @import "pages";
-@import "itemPage";
 @import "teamComps";
 
 body {
