added line spacing

--- a/src/styles/_homepage.scss
+++ b/src/styles/_homepage.scss
@@ -4,6 +4,7 @@
 
 .introduction {
   margin-bottom: 3rem;
+  line-height: 1.5;
 }
 
 .card-dots {
@@ -49,4 +50,5 @@
 
 .about-page {
   margin-top: 5rem;
+  line-height: 1.5;
 }
